--- a/client/src/components/BooksList.css
+++ b/client/src/components/BooksList.css
@@ -1,11 +1,8 @@
 .books-list {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    /* margin: 0;
-    padding: 0; */
-    /* background-color: black; */
-    align-items: center;
-    flex-wrap: wrap;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
 }
