--- a/client/src/components/Navigation/MainNavigation.css
+++ b/client/src/components/Navigation/MainNavigation.css
@@ -1,34 +1,38 @@
 .main-navigation {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 100%;
   align-items: center;
+  /* max-width: 1900px; */
 }
 
 .main-navigation__title {
-  text-align: center;
+  padding: 0 0.6rem 0 0.6rem;
+  margin: 0 1rem 0 1rem;
 }
 
 .main-navigation__menu-btn {
-  width: 3rem;
-  height: 3rem;
+  height: 2.3rem;
   background: transparent;
+  overflow: hidden;
   border: none;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   cursor: pointer;
+  margin: 0 1rem 0 1rem;
+  padding: 0;
 }
 
 .main-navigation__menu-btn span {
   display: block;
   height: 2.5px;
-  width: 3rem;
+  width: 36px;
   background-color: white;
 }
 
 .main-navigation a {
-  color: black;
+  color: white;
 }
 
 .main-navigation__header-nav {
@@ -36,6 +40,24 @@
 }
 
 .main-navigation__drawer-nav {
+}
+
+.fade-slide-enter {
+}
+
+.fade-slide-enter-active {
+  /* animation: openSide 0.4s ease-out forwards; */
+  opacity: 1;
+  transition: all 400ms;
+}
+
+.fade-slide-exit {
+}
+
+.fade-slide-exit-active {
+  /* animation: closeSide 0.4s ease-out ; */
+  opacity: 0;
+  transition: all 400ms;
 }
 
 @media (min-width: 768px) {
@@ -46,14 +68,8 @@
   .main-navigation__header-nav {
     display: block;
   }
-}
-
-@media (max-width: 768px) {
-  /* .main-navigation__header-nav {
-    display: none;
-  } */
 
   .main-navigation {
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
