--- a/client/src/components/Navigation/SideDrawer.css
+++ b/client/src/components/Navigation/SideDrawer.css
@@ -3,8 +3,46 @@
   top: 0;
   left: 0;
   z-index: 100;
-  width: 40%;
-  height: 100vh;
+  width: 210px;
+  height: 50vh;
   background-color: white;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.26)
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+.side-slide-enter {
+  transform: translateX(-100%);
+}
+
+.side-slide-enter-active {
+  animation: openSide 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  /* transform: translateX(0%);
+  transition: all 600ms cubic-bezier(0.16, 1, 0.3, 1) forwards; */
+}
+
+.side-slide-exit {
+  transform: translateX(0%);
+}
+
+.side-slide-exit-active {
+  animation: closeSide 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  /* transform: translateX(-100%);
+  transition: all 400ms cubic-bezier(0.16, 1, 0.3, 1) forwards; */
+}
+
+@keyframes openSide {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes closeSide {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
