--- a/client/src/components/BooksList.css
+++ b/client/src/components/BooksList.css
@@ -6,3 +6,10 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
+.cart-list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+}
