--- a/client/src/components/UIElements/BookImage.css
+++ b/client/src/components/UIElements/BookImage.css
@@ -1,13 +1,23 @@
 .book-image {
-  /* width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    text-align: center; */
+  width: 320px;
+  height: 320px;
 }
 
 .book-image img {
-  /* display: block;
-    width: 100%;
-    height: 100%; */
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cart-image {
+  width: 200px;
+  height: 200px;
+}
+
+.cart-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
