2nd part of Shopping cart

--- a/client/src/components/Navigation/NavLinks.css
+++ b/client/src/components/Navigation/NavLinks.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: space-between;
+  list-style: none;
 }
 
 .nav-links li {
@@ -14,6 +15,7 @@
   font-weight: bold;
   color: black;
   transition: font-size 0.2s;
+  text-decoration: none;
 }
 
 .nav-links a:hover {
