--- a/client/src/components/Navigation/MainNavigation.css
+++ b/client/src/components/Navigation/MainNavigation.css
@@ -3,7 +3,6 @@
   justify-content: space-between;
   height: 100%;
   align-items: center;
-  /* max-width: 1900px; */
 }
 
 .main-navigation__title {
@@ -33,6 +32,7 @@
 
 .main-navigation a {
   color: white;
+  text-decoration: none;
 }
 
 .main-navigation__header-nav {
