--- a/client/src/components/UIElements/BookImage.css
+++ b/client/src/components/UIElements/BookImage.css
@@ -1,6 +1,16 @@
-.book-image {
-  width: 320px;
-  height: 320px;
+.book-item__image {
+}
+
+.order-item__image {
+  width: 100px;
+  height: 100px;
+}
+
+.order-item__image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .book-image img {
