local storage cart validation

--- a/client/src/components/UIElements/Card.css
+++ b/client/src/components/UIElements/Card.css
@@ -8,6 +8,10 @@
 }
 
 .book-item__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .order-item__content {
