--- a/client/src/components/BooksList.css
+++ b/client/src/components/BooksList.css
@@ -1,7 +1,7 @@
 .books-list {
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 100%;
   align-items: center;
   flex-wrap: wrap;
