--- a/client/src/components/UIElements/BookImage.css
+++ b/client/src/components/UIElements/BookImage.css
@@ -1,4 +1,13 @@
 .book-item__image {
+  width: 200px;
+  height: 200px;
+}
+
+.book-item__image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .order-item__image {
