--- a/client/src/components/FormElements/Button.css
+++ b/client/src/components/FormElements/Button.css
@@ -1,14 +1,15 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #ff0055;
+  border: 1px solid #60edb3;
   border-radius: 4px;
-  background: #ff0055;
-  color: white;
+  background: #60edb3;
+  color: black;
   cursor: pointer;
   margin-right: 1rem;
   text-decoration: none;
   display: inline-block;
+  transition: border-color, background-color 250ms linear;
 }
 
 .button:focus {
@@ -17,36 +18,39 @@
 
 .button:hover,
 .button:active {
-  background: #ff4382;
-  border-color: #ff4382;
+  background-color: #0da868;
+  color: white;
+  border-color: #27dd91;
 }
 
 .button--inverse {
-  background: transparent;
-  color: #ff0055;
+  border-color: #0da868;
+  background-color: white;
+  color: black;
 }
 
 .button--inverse:hover,
 .button--inverse:active {
+  border-color: #60edb3;
   color: white;
-  background: #ff0055;
+  background-color: #60edb3;
 }
 
 .button--danger {
-  background: #830000;
-  border-color: #830000;
+  background-color: #ff5d5d;
+  border-color: #fe696a;
 }
 
 .button--danger:hover,
 .button--danger:active {
-  background: #f34343;
+  background-color: #f34343;
   border-color: #f34343;
 }
 
 .button:disabled,
 .button:hover:disabled,
 .button:active:disabled {
-  background: #ccc;
+  background-color: #ccc;
   color: #979797;
   border-color: #ccc;
   cursor: not-allowed;
@@ -57,5 +61,6 @@
 }
 
 .button--big {
-  font-size: 1.5rem;
+  font-weight: bold;
+  width: 100%;
 }
