--- a/client/src/components/Navigation/MainHeader.css
+++ b/client/src/components/Navigation/MainHeader.css
@@ -1,5 +1,5 @@
 .main-header {
-  background: green;
+  background: white;
   height: 4rem;
   position: fixed;
   width: 100%;
@@ -7,4 +7,5 @@
   left: 0;
   z-index: 5;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
+  /* border-bottom: 1px solid black; */
 }
