--- a/client/src/components/Navigation/NavLinks.css
+++ b/client/src/components/Navigation/NavLinks.css
@@ -2,55 +2,109 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: space-between;
+  align-items: center;
   list-style: none;
+  height: 100%;
 }
 
-.nav-links li {
-  margin: 1rem;
-  height: 1.5rem;
-}
+/* .nav-links li:last-child {
+  margin-right: 0;
+} */
 
 .nav-links li a {
-  font-weight: bold;
+  font-weight: 500;
   color: black;
-  transition: font-size 0.2s;
   text-decoration: none;
 }
 
+.cart-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: #dddddd;
+}
+
+.cart-button--icon {
+  color: #333;
+}
+
+.cart-button--badge {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.1rem;
+  width: 1.1rem;
+  font-size: 0.8rem;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  right: -7px;
+}
+
+.cart-button--icon:hover {
+  color: blue;
+}
+
 .nav-links a:hover {
-  font-size: 1.3rem;
-  transition: font-size 0.2s;
+  color: blue;
 }
 
 .nav-links a.active {
-  font-size: 1rem;
-  padding-bottom: 2px;
-  border-bottom: 2px solid black;
+}
+
+.logout {
+  margin: 0 1rem;
+}
+
+.nav-links__search {
+}
+
+.search-icon {
+  cursor: pointer;
+  margin-right: 1rem;
 }
 
 @media (min-width: 768px) {
   .nav-links {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin: auto 1rem auto 1rem;
+    width: calc(60 * 16px);
   }
 
   .nav-links li {
-    text-align: center;
-    height: auto;
-    width: 8rem;
-    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin: 0 1rem;
   }
 
   .nav-links li a {
-    color: white;
-    width: 10rem;
+    display: inline-block;
+    color: black;
+    width: auto;
+    height: auto;
   }
 
-  .nav-links a.active {
-    border-color: white;
-  }
+  /* .nav-links li:after {
+    display: block;
+    content: "";
+    margin-top: 22px;
+    border-bottom: solid 3px green;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+  } */
+
+  /* .nav-links li:hover:after {
+    transform: scaleX(1);
+  } */
 }
