--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Rubik", sans-serif;
 }
 
 body {
