--- a/client/src/components/BooksList.css
+++ b/client/src/components/BooksList.css
@@ -15,3 +15,13 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.cart-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
+}
