--- a/client/src/components/UIElements/BookImage.css
+++ b/client/src/components/UIElements/BookImage.css
@@ -22,6 +22,18 @@
   object-fit: cover;
 }
 
+.cart-item__image {
+  width: 200px;
+  height: 200px;
+}
+
+.cart-item__image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .book-image img {
   display: block;
   width: 100%;
@@ -37,6 +49,17 @@
 }
 
 .cart-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product-image {
+  width: 100%;
+}
+
+.product-image img {
   display: block;
   width: 100%;
   height: 100%;
