--- a/client/src/components/UIElements/Card.css
+++ b/client/src/components/UIElements/Card.css
@@ -35,9 +35,9 @@
   justify-content: space-between;
 }
 
-.cart-container {
+/* .cart-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-}
+} */
