--- a/client/src/pages/CheckoutPage.css
+++ b/client/src/pages/CheckoutPage.css
@@ -1,2 +1,92 @@
 .checkout-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.checkout-grid__footer {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  border-top: 2px solid #ddd;
+  padding-top: 16px;
+}
+
+.checkout-grid__footer--info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.checkout-grid__footer--info div {
+  margin-bottom: 16px;
+  padding: 0px 16px 0px 16px;
+  justify-self: center;
+  align-self: center;
+}
+
+.checkout-grid__footer--info h4 {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.checkout-grid__footer--info p {
+  width: 300px;
+}
+
+.checkout-grid__footer--total {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(50px, auto);
+  margin: 16px;
+}
+
+.checkout-grid__footer--total div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: 500;
+  padding-right: 32px;
+}
+
+.checkout-grid__footer--info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(50px, auto);
+}
+
+.checkout-ui {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  min-width: 500px;
+}
+
+/* .checkout-ui div {
+  width: 250px;
+  margin-right: 16px;
+}
+
+.checkout-ui div:last-child {
+  margin-right: 16px;
+} */
+
+@media (max-width: 768px) {
+  .checkout-grid__footer--info {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(50px, auto);
+  }
+
+  .checkout-grid__footer--info p {
+    width: 100%;
+    min-width: 250px;
+  }
+
+  .checkout-grid__footer--total {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 50px);
+    margin: 16px;
+    align-self: center;
+  }
 }
