--- a/client/src/components/UIElements/NotificationsList.css
+++ b/client/src/components/UIElements/NotificationsList.css
@@ -1,7 +1,7 @@
 .notifications-list {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: fixed !important;
+  bottom: 1rem;
+  left: calc(90% - 22rem);
   display: flex;
   flex-direction: column;
   list-style: none;
