--- a/client/src/components/BooksList.css
+++ b/client/src/components/BooksList.css
@@ -26,6 +26,7 @@
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
+  max-width: 50rem;
   align-items: center;
   flex-wrap: wrap;
 }
