--- a/client/src/components/CartItem.css
+++ b/client/src/components/CartItem.css
@@ -1,5 +1,6 @@
 .cart-item {
   width: 100%;
+  min-width: 30.5rem;
 }
 
 .cart-item__container {
@@ -8,21 +9,30 @@
   align-items: center;
   justify-content: space-between;
   padding-bottom: 1rem;
-  margin-bottom: 1rem;
   border-bottom: 1px solid #e3e9ef;
 }
 
 .cart-item__content {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  gap: 1rem;
 }
 
 .cart-item__info {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  gap: 0.5rem;
+}
+
+.cart-item__info > a {
+  font-weight: 450;
+  text-decoration: none;
+  color: inherit;
+}
+
+.cart-item__info > span {
+  color: var(--price-color);
 }
 
 .cart-item__ui {
@@ -30,11 +40,12 @@
   flex-direction: column;
   align-items: center;
 }
-.cart-item__ui h4 {
+.cart-item__ui > h4 {
+  font-size: 0.875rem;
   font-weight: 500;
   margin-bottom: 8px;
 }
-.cart-item__ui p {
+.cart-item__ui > p {
   margin-bottom: 8px;
 }
 
@@ -73,7 +84,7 @@
 }
 
 .cart-item__ui--remove span {
-  font-size: 1rem;
+  font-size: 0.875rem;
   color: red;
 }
 .cart-item__ui--remove span:last-child {
