--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,8 @@
   --price-color: #4e54c8;
   --grey-color: #e3e9ef;
   --black-color: #373f50;
+  --icon-color: #ddd;
+  --purple-color: rgb(55, 63, 80);
 }
 
 .main-content {
@@ -30,16 +32,16 @@
 .background-layer {
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 13.6rem;
   background-color: rgb(55, 63, 80);
   z-index: -1;
 }
 
-/* .center {
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
-} */
+  width: 100%;
+  height: 100%;
+}
