--- a/client/src/components/Navigation/SideDrawer.css
+++ b/client/src/components/Navigation/SideDrawer.css
@@ -1,12 +1,11 @@
 .side-drawer {
   position: fixed;
-  top: 0;
+  top: 4rem;
   left: 0;
   z-index: 100;
-  width: 210px;
-  height: 50vh;
-  background-color: white;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.26);
+  width: 100%;
+  background-color: rgb(55, 63, 80);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.26);
 }
 
 .side-slide-enter {
@@ -14,7 +13,7 @@
 }
 
 .side-slide-enter-active {
-  animation: openSide 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  animation: openSide 0.6s;
   /* transform: translateX(0%);
   transition: all 600ms cubic-bezier(0.16, 1, 0.3, 1) forwards; */
 }
@@ -24,7 +23,7 @@
 }
 
 .side-slide-exit-active {
-  animation: closeSide 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  animation: closeSide 0.6s;
   /* transform: translateX(-100%);
   transition: all 400ms cubic-bezier(0.16, 1, 0.3, 1) forwards; */
 }
