--- a/client/src/pages/ProductComponent.css
+++ b/client/src/pages/ProductComponent.css
@@ -1,41 +1,29 @@
-.product-component {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  grid-area: expandedItem;
-  gap: 1rem;
-}
-
-.expanded-item--hide-badge {
+/* .expanded-item--hide-badge {
   position: absolute;
-  right: -2.5rem;
-  top: 13.5rem;
-  background-color: #ddd;
+  right: -2rem;
+  top: 16rem;
+  background-color: var(--icon-color);
   border-top-right-radius: 150px;
   border-bottom-right-radius: 150px;
   font-size: 2rem;
   cursor: pointer;
-  height: 2.7rem;
-  width: 1.5rem;
+  height: 6rem;
+  width: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: darkgrey;
-}
-
-/* .product-component__content {
-  padding: 1rem;
-  width: 45%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  color: var(--black-color);
+  padding-right: 2px;
 } */
 
-.product-component__content div {
-  margin-bottom: 16px;
+.expanded-item--hide-badge {
+  padding-left: 0.4rem;
+}
+
+.product-component__content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .product-component__image {
@@ -72,9 +60,8 @@
 }
 
 .product-component__content--cart {
-  align-self: flex-start;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .product-component__content--cart select {
@@ -83,7 +70,6 @@
   appearance: none;
   width: 70px;
   height: 37px;
-  margin-right: 1rem;
   padding-left: 16px;
   background-image: url("../icons/expand.svg");
   background-repeat: no-repeat;
@@ -93,3 +79,10 @@
 .product-component__content--cart select:focus {
   border-color: #333;
 }
+
+/* @media (max-width: 560px) {
+  .product-component__content--cart {
+    display: flex;
+    flex-direction: column;
+  }
+} */
